# quick_game_cpp

./: CMakeLists.txt
res/maps/: map.txt
res/shaders/: shader.fs  shader.vs
src/: GameMap.cpp  GameMap.h  Monster.cpp  Monster.h  PlayerCharacter.cpp  PlayerCharacter.h  View.cpp  View.h  main.cpp
