cmake_minimum_required(VERSION 2.8)
project(quick_game_cpp)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -static")

file(GLOB SOURCE_FILES src/*.cpp)
add_executable(quick_game_cpp ${SOURCE_FILES})

if(WIN32)
    target_link_libraries(quick_game_cpp SDL2_ttf.lib)
    target_link_libraries(quick_game_cpp SDL2_image.a)
    target_link_libraries(quick_game_cpp SDL2main.lib)
    target_link_libraries(quick_game_cpp SDL2.lib)
    target_link_libraries(quick_game_cpp glew32s.lib)
    target_link_libraries(quick_game_cpp opengl32)
else()
    target_link_libraries(quick_game_cpp SDL2)
    target_link_libraries(quick_game_cpp SDL2_image)
    target_link_libraries(quick_game_cpp GLEW)
    target_link_libraries(quick_game_cpp GL)
endif()